# Learn_ffmpeg

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/learn_fmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/learn_fmpeg/: AppApplication.java  Extensions.kt  MainActivity.java  MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/learn_fmpeg/: ExampleUnitTest.java
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/java/com/example/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/main/cpp/: zplay-lib.cpp  zplay-lib.h
ffmpeg/src/main/cpp/ffmpeg/ffmpeg/: VERSION  androidarmv8.sh  config.asm  config.h  configure
ffmpeg/src/main/cpp/ffmpeg/ffmpeg/doc/: config.texi
ffmpeg/src/main/cpp/ffmpeg/ffmpeg/doc/examples/pc-uninstalled/: libavcodec-uninstalled.pc  libavdevice-uninstalled.pc  libavfilter-uninstalled.pc  libavformat-uninstalled.pc  libavutil-uninstalled.pc  libswresample-uninstalled.pc  libswscale-uninstalled.pc
ffmpeg/src/main/cpp/ffmpeg/ffmpeg/ffbuild/: config.fate  config.mak  config.sh
ffmpeg/src/main/cpp/ffmpeg/ffmpeg/libavcodec/: aaccoder.c  codec_list.c  hevc_mvs.c  opus_pvq.c
ffmpeg/src/main/cpp/ffmpeg/ffmpeg/libavfilter/: filter_list.c
ffmpeg/src/main/cpp/ffmpeg/ffmpeg/libavformat/: muxer_list.c  udp.c
ffmpeg/src/main/cpp/ffmpeg/ffmpeg/libavutil/: ffversion.h
ffmpeg/src/main/java/com/example/ffmpeg/: FFMpeg.kt
gradle/wrapper/: gradle-wrapper.properties
